-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8, jfx15
-
Component/s: javafx
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8252336 | jfx11.0.9 | Alexander Matveev | P2 | Resolved | Fixed | |
| JDK-8246511 | 8u271 | Alexander Matveev | P2 | Closed | Fixed | b01 |
Need to upgrade to the latest libFFI 3.3 (Released on November 23, 2019)
https://github.com/libffi/libffi/wiki
https://github.com/libffi/libffi/wiki
- backported by
-
JDK-8252336 Upgrade libFFI to version 3.3
-
- Resolved
-
-
JDK-8246511 Upgrade libFFI to version 3.3
-
- Closed
-
- is cloned by
-
JDK-8280840 Update libFFI to 3.4.2
-
- Resolved
-
- relates to
-
JDK-8248365 Debug build crashes on Windows when playing media file
-
- Resolved
-
(1 links to)