8239095: Upgrade libFFI to the latest 3.3 version